traefik/ingressroute.yaml
apiVersion: v1
items:
- apiVersion: traefik.containo.us/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      helm.sh/hook: post-install,post-upgrade
    creationTimestamp: "2022-04-28T19:24:18Z"
    generation: 2
    labels:
      app.kubernetes.io/instance: traefik
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: traefik
      helm.sh/chart: traefik-10.14.100
    managedFields:
    - apiVersion: traefik.containo.us/v1alpha1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:helm.sh/hook: {}
          f:labels:
            .: {}
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/managed-by: {}
            f:app.kubernetes.io/name: {}
            f:helm.sh/chart: {}
        f:spec:
          .: {}
          f:routes: {}
      manager: helm
      operation: Update
      time: "2022-04-28T19:24:18Z"
    - apiVersion: traefik.containo.us/v1alpha1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:entryPoints: {}
      manager: kubectl-edit
      operation: Update
      time: "2022-05-06T10:11:22Z"
    name: traefik-dashboard
    namespace: kube-system
    resourceVersion: "7257"
    uid: ce3936ed-c9c6-4b2f-a450-12eb00d0c222
  spec:
    entryPoints:
    - traefik
    - websecure
    routes:
    - kind: Rule
      match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
      services:
      - kind: TraefikService
        name: api@internal
- apiVersion: traefik.containo.us/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.containo.us/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"pihole","namespace":"pihole"},"spec":{"entryPoints":["websecure"],"routes":[{"kind":"Rule","match":"Host(`192.168.1.100`)","services":[{"kind":"Service","name":"pihole-web","namespace":"pihole","port":80}]}]}}
    creationTimestamp: "2022-05-06T15:07:54Z"
    generation: 1
    managedFields:
    - apiVersion: traefik.containo.us/v1alpha1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:spec:
          .: {}
          f:entryPoints: {}
          f:routes: {}
      manager: kubectl-client-side-apply
      operation: Update
      time: "2022-05-06T15:07:54Z"
    name: pihole
    namespace: pihole
    resourceVersion: "11966"
    uid: 4615e2ff-943e-4fb9-957b-53bf16da0117
  spec:
    entryPoints:
    - websecure
    routes:
    - kind: Rule
      match: Host(`192.168.1.100`)
      services:
      - kind: Service
        name: pihole-web
        namespace: pihole
        port: 80
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
